# mistsim

./: .flake8  .gitignore  CLAUDE.md  LICENSE  README.md  TESTING_SUMMARY.md  junit.xml  pyproject.toml
.github/workflows/: ci.yml
examples/: Untitled.ipynb  sim_comparison.ipynb
notebooks/: lmax_analysis.ipynb  mapmaking.ipynb  sky_lmax_error.ipynb
notebooks/mapmaking/: compare_3runs.ipynb  compare_freq.ipynb  compare_freq_lake.ipynb  compare_lmax.ipynb  compare_nominal.ipynb  compare_nominal_25mhz.ipynb  compare_results.ipynb  gsm_vs_haslam_vs_guzman.ipynb  map_naive.ipynb  multi_latitudes-different_beams.ipynb  multi_latitudes.ipynb  prior_mismatch.ipynb  prior_mismatch_shape.ipynb  three_latitudes.ipynb
notebooks/mapmaking/configs/: alma-csa2022-dip-nv-dip-alma-mono-analytic-nv-mono-analytic.yaml  alma-csa2022-dip-nv-dip.yaml  beams.yaml  mars-csa2022-dip-alma-csa2022-dip-nv-dip.yaml  mars-csa2022-dip-mars-mono-analytic-nv-dip-nv-mono-analytic-alma-csa2022-dip-alma-mono-analytic.yaml  mars-csa2022-dip-mars-mono-analytic-nv-dip-nv-mono-analytic.yaml  mars-csa2022-dip-nv-dip-nv-mono-analytic-mars-mono-analytic.yaml  mars-csa2022-dip-nv-dip-nv-mono-analytic.yaml  mars-csa2022-dip-nv-dip.yaml  mars-lake-dip-nv-dip.yaml  runs.yaml  test-compare-old-mars-dip-nv-dip.yaml
notebooks/mapmaking/notebooks_out/: all-nominal.ipynb  alma-csa2022-dip-alma-mono-analytic-southpole-csa2022-dip-southpole-mono-analytic.ipynb  alma-torres.ipynb  mars-csa2022-dip-alma-csa2022-dip-nv-dip.ipynb  mars-csa2022-dip-mars-mono-analytic-nv-dip-nv-mono-analytic-alma-csa2022-dip-alma-mono-analytic-southpole-csa2022-dip-southpole-mono-analytic.ipynb  mars-csa2022-dip-mars-mono-analytic-nv-dip-nv-mono-analytic-alma-csa2022-dip-alma-mono-analytic.ipynb  mars-csa2022-dip-mars-mono-analytic-nv-dip-nv-mono-analytic.ipynb  mars-csa2022-dip-nv-dip-nv-mono-analytic-mars-mono-analytic-alma-csa2022-dip-alma-mono-analytic.ipynb  mars-csa2022-dip-nv-dip-nv-mono-analytic-mars-mono-analytic.ipynb  mars-csa2022-dip-nv-dip-nv-mono-analytic.ipynb  mars-csa2022-dip-nv-dip.ipynb  (+8 more)
notebooks/sim_comparisons/: interp_beam.ipynb  lmax_analysis.ipynb  sim_comparison.ipynb  sim_comparison_azrot0.ipynb  sim_comparison_azrot90.ipynb  sim_comparison_rerun.ipynb
scripts/: .mapmaking_done  convert_haslam_to_mwss.py  feko_parser.py  generate_all_data.py  read_beam_hdf5.py  run_all_mapmaking.sh  run_mapmaking.py  run_multifreq_batched.sh  run_multifreq_lake_batched.sh
src/mistsim/: __init__.py  alm.py  beam.py  mapmaking.py  pipeline.py  plotting.py  sim.py  sky.py  utils.py
tests/: README.md  ROTATION_INVESTIGATION_REPORT.md  __init__.py  conftest.py  test_beam.py  test_map.py  test_rotation_investigation.py  test_sim.py  test_sky.py  test_utils.py  test_wiener_regression.py
(+3 files in other folders)
