[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mistsim"
version = "0.0.1"
description = "Simulations of MIST observations."
readme = "README.md"
requires-python = ">=3.10, <3.13"
license = {text = "MIT"}
authors = [{ name="Christian Hellum Bye", email="cbh@berkeley.edu" }]
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
  "croissant-sim>=5.0.0",
  "equinox",
  "jax",
  "numpy",
  "s2fft",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-timeout",
  "ruff",
]

[project.urls]
Homepage = "https://github.com/MIST-Experiment/mistsim"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "--cov=src",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--junitxml=junit.xml",
  "-o junit_family=legacy",
  "--timeout=60",
]

[tool.ruff]
line-length = 79
exclude = ["examples/data"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"notebooks/*" = ["E402"]

[tool.uv.sources]
croissant-sim = { path = "../../../projects/croissant" }

[dependency-groups]
dev = [
  "healpy>=1.19.0",
  "ipympl>=0.10.0",
  "jupyterlab>=4.5.4",
  "jupyterlab-vim>=4.1.4",
  "matplotlib>=3.10.8",
  "pygdsm>=1.6.4",
  "pytest",
  "pytest-cov",
  "pytest-timeout",
  "ruff",
]
